# llvm-passes

./: README.md
UninitializedVariables/: CMakeLists.txt  main.cpp  pass.cpp  pass.hpp
UninitializedVariables/tests/: test01.c  test01.ll  test02.c  test02.ll  test03.c  test03.ll
src/: DeadFunctionAnalyzer.cpp
tests/: test00.c  test01.c  test02.c
